--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/anak/anak.component.css
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/anak/anak.component.css
@@ -8,6 +8,17 @@
   margin: 20px 0;
   text-align: center;
 }
+article section h1 {
+  text-align: center;
+}
+
+.users {
+  width: 1370px;
+  border: 1px solid rgb(206, 195, 195);
+  margin: 10px auto;
+  padding: 10px;
+  box-shadow: 1px 1px 1px gray;
+}
 /* .mat-expansion-panel-header {
   background-color: aqua;
 } */
