Add Loading Indicator UI

--- a/Bintangku.WebUI/client/src/app/app.component.html
+++ b/Bintangku.WebUI/client/src/app/app.component.html
@@ -8,13 +8,13 @@
     </mat-sidenav>
     <!--  -->
     <mat-sidenav-content>
+      <ngx-spinner>Loading...</ngx-spinner>
       <main class="wrapper">
         <router-outlet></router-outlet>
         <div class="push"></div>
       </main>
       <!-- Footer -->
       <app-footer></app-footer>
-
     </mat-sidenav-content>
   </mat-sidenav-container>
 </app-layout>
