--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/anak/anak.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/anak/anak.component.html
@@ -107,7 +107,7 @@
             <tr class="pointer" routerLink="/anak-members/{{ memberAnak.id }}">
               <th scope="row">
                 <img
-                  [src]="memberAnakService.createImgPath(memberAnak.imagePath)"
+                  [src]="memberAnak.imagePath"
                   alt="profile picture"
                   style="width: 60px; height: 60px; text-align: center"
                 />
