Before update database for Pemeriksaan Kesehatan Anak

--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/anak-detail/anak-detail.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/anak-detail/anak-detail.component.html
@@ -52,7 +52,7 @@
           <button
             mat-raised-button
             color="primary"
-            routerLink="/anak-members/edit/{{ memberAnak.id }}"
+            routerLink="/anak-members/edit/{{ memberAnak.dataAnakId }}"
             style="margin-right: 5px"
           >
             Edit
@@ -235,7 +235,7 @@
               mat-raised-button
               color="primary"
               routerLink="/anak-members/pemeriksaan-kesehatan/{{
-                memberAnak.id
+                memberAnak.dataAnakId
               }}"
             >
               Pemeriksaan
