--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/anak/anak.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/anak/anak.component.html
@@ -104,7 +104,10 @@
             </tr>
           </thead>
           <tbody *ngFor="let memberAnak of memberAnaks">
-            <tr class="pointer" routerLink="/anak-members/{{ memberAnak.id }}">
+            <tr
+              class="pointer"
+              routerLink="/anak-members/{{ memberAnak.dataAnakId }}"
+            >
               <th scope="row">
                 <img
                   [src]="memberAnak.imagePath"
