Impelement pemeriksaan kesehatan UI

--- a/Bintangku.WebUI/client/src/app/contents/memberAnak/anak-detail/anak-detail.component.html
+++ b/Bintangku.WebUI/client/src/app/contents/memberAnak/anak-detail/anak-detail.component.html
@@ -96,7 +96,7 @@
         <!-- Kesehatan Anak Tab -->
         <mat-tab label="Kesehatan Anak">
           <app-kesehatan-tab></app-kesehatan-tab>
-          <button
+          <!-- <button
             type="submit"
             mat-raised-button
             color="primary"
@@ -105,7 +105,7 @@
             }}"
           >
             InputPemeriksaan
-          </button>
+          </button> -->
         </mat-tab>
         <!-- End - Tab Kesehatan Anak -->
         <!-- Grafik Tab -->
