--- a/Bintangku.WebUI/client/src/styles.scss
+++ b/Bintangku.WebUI/client/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+// @import "~bootstrap/scss/bootstrap.scss";
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
-@import "~bootstrap/scss/bootstrap.scss";
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
   height: 100%;
