--- a/Bintangku.WebUI/client/src/app/navigation/header/header.component.html
+++ b/Bintangku.WebUI/client/src/app/navigation/header/header.component.html
@@ -1,50 +1,27 @@
-<mat-toolbar color="primary">
-  <a mat-icon-button (click)="onToggleSidenav()">
-    <mat-icon>menu</mat-icon>
-  </a>
-  <a class="example-app-name bintangku" routerLink="/home">Bintangku</a>
-
-  <!-- Dropdown User When Login -->
-  <div
-    class="dropdown"
-    fxFlex
-    fxLayout
-    fxLayoutAlign="end"
-    fxHide.xs
-    *ngIf="accountService.currentUser$ | async as user"
-  >
-    <mat-icon
-      class="account-circle"
-      material-icons.md-48
-      [matMenuTriggerFor]="menu"
-      >account_circle</mat-icon
-    >
-    <!-- <button mat-button>Menu</button> -->
-    <mat-menu #menu="matMenu">
-      <a class="a" mat-menu-item routerLink="/nakes-members/{{ user.username }}"
-        >Profile</a
-      >
-      <a class="a" mat-menu-item (click)="logout()">Logout</a>
-    </mat-menu>
+<div class="fixed flex right-0 left-0 z-50 top-6">
+  <div class="xl:container mx-auto space-x-6 flex items-center">
+    <div class="rounded-xl shadow-xl px-2 flex items-center bg-white h-16 w-16">
+        <mat-icon>subject</mat-icon>
+    </div>
+    <div class="flex container rounded-xl px-7 h-16 bg-white shadow-xl items-center justify-between">
+      <div class="flex space-x-2 items-center">
+        <img src="/assets/images/logo.png" class="rounded-full w-9 h-9">
+        <h1 class="text-blue-700 text-xl m-0 font-bold"> Bintangku</h1>
+      </div>
+      <div class="hidden md:block md:space-x-8">
+        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Beranda</a>
+        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Misi</a>
+        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Layanan</a>
+        <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Tentang</a>
+      </div>
+      <div class="space-x-2">
+        <a [routerLink]="['/login']" mat-raised-button color="accent" class="btn-auth accent" routerLinkActive="router-link-active">
+          login
+        </a>
+        <a [routerLink]="['/register']" mat-raised-button  color="primary" class="btn-auth" routerLinkActive="router-link-active">
+          register
+        </a>
+      </div>
+    </div>
   </div>
-  <!-- End - Dropdown User When Login -->
-
-  <!-- Account Navigation When User Not Login -->
-  <div
-    fxFlex
-    fxLayout
-    fxLayoutAlign="end"
-    fxHide.xs
-    *ngIf="(accountService.currentUser$ | async) === null"
-  >
-    <ul fxLayout fxLayoutGap="15px" class="navigation-items">
-      <li>
-        <a mat-raised-button color="primary" routerLink="/login">Login</a>
-      </li>
-      <li>
-        <a mat-raised-button color="accent" routerLink="/register">Register</a>
-      </li>
-    </ul>
-  </div>
-  <!-- End - Account Navigation When User Not Login -->
-</mat-toolbar>
+</div>
